// Vitest Snapshot v1

exports[`main -> KanaCharacter > History List > should show the actual values for characters 1`] = `
<div>
  <div
    class="kana-character-block"
    data-testid="historyCharacter"
  >
    <span
      class="character-list-item-actual"
    >
      zo
    </span>
    <span
      class="character-list-item-input text-green-600"
      data-testid="historyCharacterValue"
    >
      zo
    </span>
    <span
      class="character-list-item-time"
    >
      0
      s
    </span>
    ぞ
  </div>
</div>
`;

exports[`main -> KanaCharacter > should not show the actual values for "Input" characters 1`] = `
<div>
  <div
    class="kana-character-block kana-input-field"
    data-testid="inputCharacter"
  >
    <span
      class="character-list-item-input text-xl leading-normal left-2"
      data-testid="inputCharacterValue"
    >
      <span
        class="border-b border-black border-solid inline-block w-1 animate-flash"
      />
    </span>
    ぞ
  </div>
</div>
`;
